<resources>
    <string name="app_name">HospitalSmartQ</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="press_to_exit">Press again to exit</string>
    <string name="btn_login">Log in</string>
    <string name="btn_register">Register</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_nev1">Navigater</string>
    <string name="txtHN">HN(Hospital Number)</string>
    <string name="txtPass">ID No.</string>
    <string name="app_info">App Information</string>
    <string name="nav_home">Home</string>
    <string name="nav_map">Map</string>
    <string name="nav_about">About</string>
    <string name="nav_exit">Log out</string>
    <string name="txtWait">wait</string>
</resources>
