<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_assignment"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_menu_map"
            android:title="@string/nav_map" />

    </group>
    <item android:title="@string/app_info">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_help_black"
                android:title="@string/nav_about" />
            <item
                android:id="@+id/nav_exit"
                android:icon="@drawable/ic_menu_exit"
                android:title="@string/nav_exit" />
        </menu>
    </item>
</menu>
